--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,4 +1,4 @@
-col-sm-8, .col-sm-4, .col-sm-7, .col-md-6 {
+/* col-sm-8, .col-sm-4, .col-sm-7, .col-md-6 {
     margin-top: .75rem;
     margin-bottom: .75rem;
 }
@@ -11,4 +11,4 @@ col-sm-8, .col-sm-4, .col-sm-7, .col-md-6 {
     background-color: #f8f9fa!important;
     border: 1px solid #f8f9fa;
 
-}
+} */
