--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+.row{
+  
+  margin: 1%;
+}
+.card-img-manual{
+  width:98px;
+  height:98px;
+  margin: 2%;
+}
+
+
 .App {
   text-align: center;
 }
