--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,11 +1,11 @@
-.col-sm-3, .col-sm-12,.col-sm-8,.col-sm-4,.col-sm-7,.col-lg-4,.col-md-6{
+/* .col-sm-3, .col-sm-12,.col-sm-8,.col-sm-4,.col-sm-7,.col-lg-4,.col-md-6{
     padding-top: .75rem;
     padding-bottom: .75rem;  
     background-color: #f8f9fa!important;
     border: 1px solid #f8f9fa;
 
-}
-.col-sm-8,.col-sm-4,.col-sm-7,.col-md-6{
+} */
+/* .col-sm-8,.col-sm-4,.col-sm-7,.col-md-6{
     margin-top:1.25rem;
     margin-bottom: .75rem;
 }
@@ -24,7 +24,7 @@
 }
 .col-md-6 > p{
     text-align: center; 
-}
+} */
 .skillset > .btn-toolbar > button{
     margin: .2rem;
     text-align: justify;
